17112024 - 1847 Herencia de HTML navbar falta pulir

--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,2 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <h1>{{ title }}</h1>
 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus voluptates dolores earum error iste repellendus deleniti harum omnis vero recusandae dicta, neque corrupti sunt beatae debitis dolorum? Qui maxime veniam voluptatem? Iste dignissimos a libero.</p>
+{%endblock%}
