--- a/myapp/templates/projects.html
+++ b/myapp/templates/projects.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <h1>PROJECTS</h1>
 
 {%  for project in projects %}
@@ -7,3 +11,5 @@
 </div>
 
 {% endfor %}
+
+{% endblock %}
