--- a/myapp/templates/tasks.html
+++ b/myapp/templates/tasks.html
@@ -1,3 +1,7 @@
+{% extends 'layouts/base.html' %}
+
+{% block content %}
+
 <h1>TASKS</h1>
 
 {% for task in tasks %}
@@ -15,3 +19,5 @@
 </div>
 
 {% endfor %}
+
+{% endblock %}
