--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,6 +1,11 @@
 {% extends 'layouts/base.html' %}
 
+{% load static %}
+
 {% block content %}
 <h1>{{ title }}</h1>
+
+<img src="{% static 'rengo1.png' %}" alt="" width="500">
+
 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus voluptates dolores earum error iste repellendus deleniti harum omnis vero recusandae dicta, neque corrupti sunt beatae debitis dolorum? Qui maxime veniam voluptatem? Iste dignissimos a libero.</p>
 {%endblock%}
