--- a/myapp/templates/projects/detail.html
+++ b/myapp/templates/projects/detail.html
@@ -1,15 +1,14 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
+<h1>{{project}}</h1>
 
-<h1>PROJECTS</h1>
-
-{%  for project in projects %}
-
+{% for task in tasks %}
 <div>
-<h1>{{project.name}}</h1>
+    <h1>
+        {{task.title}}
+    </h1>
 </div>
-
 {% endfor %}
 
 {% endblock %}
